<resources>
    <string name="app_name">Premiere</string>
    <string name="img_desc">img desc</string>
    <string name="genre_title">Genre</string>
    <string name="relase_title">Relase</string>
    <string name="movie_genre">Movie Genre</string>
    <string name="movie_relase_date">Movie Relase Date</string>
    <string name="status">Status</string>
    <string name="movie_status">Movie Status</string>
    <string name="overview_title">Overview</string>
    <string name="movie_overview">A dummy movie overview A dummy movie overview A dummy movie overview A dummy movie overview A dummy movie overview A dummy movie overview</string>
    <string name="homepage_title">Homepage</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_is_empty">Data is empty!</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="popularity_title">Popularity</string>
    <string name="movie_popularity">Movie Popularity</string>
    <string name="share">Share</string>
    <string name="age_rating_title">Age Rating</string>
    <string name="movie_age_rating">Movie Age Rating</string>
    <string name="favorite">Favorite</string>
    <string name="app_name_upcase">PREMIERE</string>
    <string name="title_favorite">Favorite</string>
    <string name="share_movie">Im inviting you to watch this movie</string>
</resources>